WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
254428
REGRESSION (
262041@main
): Keyboard scrolling animates from (0, 0) when smooth keyboard scrolling is disabled and UI-side compositing is enabled
https://bugs.webkit.org/show_bug.cgi?id=254428
Summary
REGRESSION (262041@main): Keyboard scrolling animates from (0, 0) when smooth...
Wenson Hsieh
Reported
2023-03-24 09:03:47 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2023-03-24 09:10:21 PDT
Hm...this only seems to reproduce when smooth keyboard scrolling is *disabled*.
Wenson Hsieh
Comment 2
2023-03-24 14:03:02 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/11949
EWS
Comment 3
2023-03-24 16:32:47 PDT
Committed
262105@main
(e94fbc9c6f2a): <
https://commits.webkit.org/262105@main
> Reviewed commits have been landed. Closing PR #11949 and removing active labels.
Radar WebKit Bug Importer
Comment 4
2023-03-24 16:33:16 PDT
<
rdar://problem/107207811
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug